# logpilot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  _config.yml  app.py  build.sh  index.html  index.yaml  ingress.yaml  kpf.py  kube-web-log-viewer.yaml  log-viewer.yaml  log_archiver.py  pyproject.toml  requirements.txt  test_auth.py
.github/: bumpversion.cfg
.github/scripts/: pyproject.toml  requirements.txt  update_helm_bumper.py  update_helm_publisher.py  version_manager.py
.github/workflows/: branch-cleaner.yml  e2e_test.yml  gh-pages.yml  helm-bumper.yml  helm-publisher.yml  helm-release.yml  helm-test.yml  helm-tester.yml  simple-version-bump.yml  version-bumper.yml
charts/: README.md
charts/kube-web-log-viewer/: Chart.yaml  pyproject.toml  values.yaml
charts/kube-web-log-viewer/src/: README.md  __init__.py  index.html  log_archiver.py  main.py
charts/kube-web-log-viewer/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
charts/kube-web-log-viewer/tests/: configmap_test.yaml  deployment_test.yaml  ingress_test.yaml  pvc_test.yaml  service_test.yaml
charts/logpilot/: Chart.yaml  pyproject.toml  values.yaml
charts/logpilot/src/: __init__.py  events.py  index.html  log_archiver.py  main.py
charts/logpilot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  serviceaccount.yaml
charts/logpilot/tests/: configmap_test.yaml  deployment_test.yaml  ingress_test.yaml  pvc_test.yaml  service_test.yaml
k8s/: deployment.yaml  rbac.yaml  service.yaml
scripts/: check-versions.sh  run_tests.py  update-versions.sh
src/: __init__.py  index.html  log_archiver.py  main.py
tests/: README.md  README_ANSI_TESTS.md  conftest.py  kpf.py  log-gen-deployment.yaml  run_ansi_tests.py  test-pod.yaml  test_ansi_error_handling.py  test_app_playwright.py  test_auth_playwright.py  test_frontend_ansi.py  test_integration_ansi.py
