[project]
name = "logPilot"
version = "0.3.4"
description = "A simple Kubernetes log viewer web app"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "kubernetes",
    "requests"
]
authors = [ {name = "Jesse Goodier", email = "31039225+jessegoodier@users.noreply.github.com"} ]

[project.optional-dependencies]
dev = [
    "playwright",
    "gunicorn",
    "pytest",
    "pytest-playwright",
    "ruff",
    "isort",
    "packaging",
    "bump2version",
  ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 119
target-version = "py312"

# ==== isort ====

[tool.isort]
profile = "black"  # Keep black profile for isort compatibility
line_length = 119
known_first_party = [
  "tests",
  "scripts",
  "hooks",
]