[project]
name = "version-manager"
version = "0.1.0"
description = "Version management script for GitHub Actions"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "packaging",
    "bump2version",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 113
target-version = ["py312"]

[tool.ruff]
line-length = 113
target-version = "py312" 